--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -1064,6 +1064,7 @@
     <Content Include="Views\DepartmentalAdminRequest\Instructions.cshtml" />
     <Content Include="Views\Ping\Index.cshtml" />
     <Content Include="Views\Order\AssignAccountsPayableUser.cshtml" />
+    <Content Include="Views\History\AccountsPayableOrders.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
