--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -11,7 +11,7 @@
       <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
       <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
-      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+      <!--<section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />-->
     </sectionGroup>
   </configSections>
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
@@ -39,7 +39,7 @@
     <security allowRemoteAccess="1" />
     <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="MainDB" applicationName="Purchasing" />
     <errorMail from="automatedemail@caes.ucdavis.edu" to="opp-tech@ucdavis.edu" subject="ELMAH: Purchasing web error response" smtpServer="smtp.ucdavis.edu" />
-    <errorFilter>
+    <!--<errorFilter>
       <test>
         <jscript>
           <expression><![CDATA[
@@ -54,7 +54,7 @@
                 ]]></expression>
         </jscript>
       </test>
-    </errorFilter>
+    </errorFilter>-->
   </elmah>
   <connectionStrings>
     <add name="MainDB" connectionString="data source=terry;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
@@ -116,7 +116,7 @@
     <httpModules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
-      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+      <!--<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />-->
     </httpModules>
   </system.web>
   <system.webServer>
@@ -124,7 +124,7 @@
     <modules runAllManagedModulesForAllRequests="true">
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
-      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+      <!--<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />-->
     </modules>
     <!-- GZip static file content.  Overrides the server default which only compresses static files over 2700 bytes -->
     <httpCompression directory="%SystemDrive%\websites\_compressed" minFileSizeForComp="1024">
