New KFS Url for Api

--- a/Purchasing.WS/app.config
+++ b/Purchasing.WS/app.config
@@ -1,7 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <system.serviceModel>
-        <bindings />
-        <client />
+        <bindings>
+            <basicHttpBinding>
+                <binding name="purchaseDocumentsInterfaceServiceSOAPSoapBinding" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://kfs1.ucdavis.edu/kfs-prd/remoting/purchaseDocumentsInterfaceServiceSOAP"
+                binding="basicHttpBinding" bindingConfiguration="purchaseDocumentsInterfaceServiceSOAPSoapBinding"
+                contract="PurchaseDocumentService.purchasingDocumentsInterfaceServiceSOAP"
+                name="purchasingDocumentsInterfaceServiceSOAPPort" />
+        </client>
     </system.serviceModel>
 </configuration>
