Updates for MVC 3, config files, etc to get it to build

--- a/Purchasing.WS/app.config
+++ b/Purchasing.WS/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <system.serviceModel>
         <bindings>
@@ -7,10 +7,15 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://kfs1.ucdavis.edu/kfs-prd/remoting/purchaseDocumentsInterfaceServiceSOAP"
-                binding="basicHttpBinding" bindingConfiguration="purchaseDocumentsInterfaceServiceSOAPSoapBinding"
-                contract="PurchaseDocumentService.purchasingDocumentsInterfaceServiceSOAP"
-                name="purchasingDocumentsInterfaceServiceSOAPPort" />
+            <endpoint address="http://kfs1.ucdavis.edu/kfs-prd/remoting/purchaseDocumentsInterfaceServiceSOAP" binding="basicHttpBinding" bindingConfiguration="purchaseDocumentsInterfaceServiceSOAPSoapBinding" contract="PurchaseDocumentService.purchasingDocumentsInterfaceServiceSOAP" name="purchasingDocumentsInterfaceServiceSOAPPort" />
         </client>
     </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.1" newVersion="3.0.0.1" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
