--- a/Purchasing.Tests/packages.config
+++ b/Purchasing.Tests/packages.config
@@ -5,6 +5,10 @@
   <package id="CommonServiceLocator" version="1.0" />
   <package id="FluentNHibernate" version="1.3.0.727" />
   <package id="Iesi.Collections" version="3.2.0.4000" />
+  <package id="Microsoft.AspNet.Mvc" version="3.0.50813.1" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Razor" version="1.0.20105.408" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebPages" version="1.0.20105.408" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="MvcContrib.Mvc3.TestHelper-ci" version="3.0.100.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.5" />
   <package id="NHibernate" version="3.3.0.4000" />
