--- a/Purchasing.WS/packages.config
+++ b/Purchasing.WS/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.Mvc" version="3.0.50813.1" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Razor" version="1.0.20105.408" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebPages" version="1.0.20105.408" targetFramework="net40" />
   <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net40" />
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.1.0" targetFramework="net40" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net40" />
   <package id="UcdArch" version="3.3.0.76" />
