--- a/Purchasing.Mvc/packages.config
+++ b/Purchasing.Mvc/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="AutoMapper" version="3.2.1" targetFramework="net451" />
   <package id="bootstrap" version="3.3.0" targetFramework="net45" />
   <package id="Castle.Core" version="3.2.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net45" />
@@ -17,6 +18,7 @@
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc.Futures" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
@@ -29,6 +31,8 @@
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net45" />
   <package id="NPOI" version="2.0.6" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="Sendgrid" version="5.0.0" targetFramework="net451" />
+  <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net451" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net451" />
   <package id="UcdArch" version="5.1.0.144" targetFramework="net451" />
   <package id="UcdArch.Mvc" version="5.1.0.144" targetFramework="net45" />
