role provider running

--- a/Purchasing.Mvc/Web.config
+++ b/Purchasing.Mvc/Web.config
@@ -47,12 +47,12 @@
       <error statusCode="403" redirect="Error/NotAuthorized" />
       <error statusCode="404" redirect="Error/FileNotFound" />
     </customErrors>
-    <!--<roleManager enabled="true" defaultProvider="PurchasingRoleProvider" cacheRolesInCookie="false">
+    <roleManager enabled="true" defaultProvider="PurchasingRoleProvider" cacheRolesInCookie="false">
       <providers>
         <clear />
-        <add name="PurchasingRoleProvider" type="Purchasing.Web.Providers.PurchasingRoleProvider" connectionStringName="MainDB" applicationName="Purchasing" />
+        <add name="PurchasingRoleProvider" type="Purchasing.Mvc.Providers.PurchasingRoleProvider" connectionStringName="MainDB" applicationName="Purchasing" />
       </providers>
-    </roleManager>-->
+    </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
