add in nh caches

--- a/Purchasing.Mvc/Web.config
+++ b/Purchasing.Mvc/Web.config
@@ -12,6 +12,7 @@
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+    <section name="syscache" type="NHibernate.Caches.SysCache2.SysCacheSectionHandler, NHibernate.Caches.SysCache2" requirePermission="false" />
   </configSections>
   <appSettings file="AppSettings.config">
     <add key="webpages:Version" value="3.0.0.0" />
@@ -225,4 +226,9 @@
       <property name="adonet.batch_size">25</property>
     </session-factory>
   </hibernate-configuration>
+  <syscache>
+    <!--Cache long term for a day, short term for an hour-->
+    <cache region="LongTerm" expiration="86400" priority="5" />
+    <cache region="ShortTerm" expiration="3600" priority="3" />
+  </syscache>
 </configuration>
