--- a/Purchasing.Mvc/Purchasing.Mvc.csproj
+++ b/Purchasing.Mvc/Purchasing.Mvc.csproj
@@ -856,7 +856,7 @@
     <Content Include="Views\Workgroup\WhoHasAccessToWorkgroup.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Data\Indexes\OrderHistory\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
