Need the automapper to add custom fields, or need to modify the transfer values so it doesn't call automapper. Also added a css bundle

--- a/Purchasing.Mvc/Purchasing.Mvc.csproj
+++ b/Purchasing.Mvc/Purchasing.Mvc.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Attributes\AuthorizeWorkgroupRoleAttribute.cs" />
     <Compile Include="Attributes\IpFilter.cs" />
     <Compile Include="Attributes\VersionAttribute.cs" />
+    <Compile Include="AutomapperConfig.asax.cs" />
     <Compile Include="ComponentRegistrar.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AccountsController.cs" />
