--- a/Purchasing.Mvc/packages.config
+++ b/Purchasing.Mvc/packages.config
@@ -9,6 +9,7 @@
   <package id="Dapper" version="1.38" targetFramework="net451" />
   <package id="DataAnnotationsExtensions" version="1.1.0.0" targetFramework="net45" />
   <package id="DataAnnotationsExtensions.MVC3" version="1.1.0.0" targetFramework="net45" />
+  <package id="Elasticsearch.Net" version="1.3.1" targetFramework="net451" />
   <package id="elmah" version="1.2.2" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net45" />
@@ -27,6 +28,7 @@
   <package id="MiniProfiler" version="3.1.1.140" targetFramework="net451" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="MvcContrib.Mvc3.FluentHtml-ci" version="3.0.100.0" targetFramework="net45" />
+  <package id="NEST" version="1.3.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net45" />
   <package id="NPOI" version="2.0.6" targetFramework="net451" />
