--- a/Purchasing.Mvc/Web.config
+++ b/Purchasing.Mvc/Web.config
@@ -19,6 +19,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="AfsUrl" value="https://kfs-test.ucdavis.edu/kfs-tst2/remoting/purchaseDocumentsInterfaceServiceSOAP" />
+    <add key="AfsRoleUrl" value="http://kfs-test.ucdavis.edu/kfs-tst2/remoting/financialSystemRoleServiceSOAP" />
+    <add key="AfsToken" value="stage" />
   </appSettings>
   <connectionStrings>
     <add name="MainDB" connectionString="data source=.\SQLExpress;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
