Cleaning up rec'd order page, spliting pages with payment and rec'd items

--- a/Purchasing.Mvc/Purchasing.Mvc.csproj
+++ b/Purchasing.Mvc/Purchasing.Mvc.csproj
@@ -480,6 +480,7 @@
     <Content Include="Css\single\chosen.css" />
     <Content Include="Css\single\fileuploader\fileuploader.css" />
     <Content Include="Css\single\fileuploader\loading.gif" />
+    <Content Include="Css\single\receive-payment.css" />
     <Content Include="Css\single\guider.css" />
     <Content Include="Css\single\jquery.multiselector.css" />
     <Content Include="Css\single\orderrequest.css" />
@@ -642,6 +643,7 @@
     <Content Include="Scripts\public\single\jquery.stickyfloat.js" />
     <Content Include="Scripts\public\single\jquery.tablednd_0_5.js" />
     <Content Include="Scripts\public\single\jquery.tmpl.min.js" />
+    <Content Include="Scripts\public\single\receive-payment.js" />
     <Content Include="Scripts\public\single\Landing.js" />
     <Content Include="Scripts\public\single\OrderReview.js" />
     <Content Include="Scripts\public\single\RearrangeDataTable.js" />
@@ -857,6 +859,7 @@
     <Content Include="Views\Workgroup\UpdateMultipleAccounts.cshtml" />
     <Content Include="Views\Workgroup\VendorList.cshtml" />
     <Content Include="Views\Workgroup\WhoHasAccessToWorkgroup.cshtml" />
+    <Content Include="Views\Order\PayInvoice.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
