working server->client plus cleanup

--- a/Purchasing.Mvc/Purchasing.Mvc.csproj
+++ b/Purchasing.Mvc/Purchasing.Mvc.csproj
@@ -325,9 +325,8 @@
     <Compile Include="Services\UserIdentity.cs" />
     <Compile Include="Services\UservoiceService.cs" />
     <Compile Include="Services\WorkgroupService.cs" />
-    <Compile Include="SignalR.Sample\Stock.cs" />
-    <Compile Include="SignalR.Sample\StockTicker.cs" />
-    <Compile Include="SignalR.Sample\StockTickerHub.cs" />
+    <Compile Include="Signalr\PurchaseInfo.cs" />
+    <Compile Include="Signalr\PurchaseInfoHub.cs" />
     <Compile Include="Utility\IdAndName.cs" />
     <Compile Include="Utility\WorkgroupPermissionActions.cs" />
   </ItemGroup>
@@ -674,11 +673,11 @@
     <Content Include="Scripts\public\single\ZeroClipboard.js" />
     <Content Include="Scripts\qunit.js" />
     <Content Include="Scripts\slider.js" />
-    <Content Include="SignalR.Sample\jquery-1.10.2.min.js" />
-    <Content Include="SignalR.Sample\jquery.color-2.1.2.min.js" />
-    <Content Include="SignalR.Sample\SignalR.StockTicker.js" />
-    <Content Include="SignalR.Sample\StockTicker.css" />
-    <Content Include="SignalR.Sample\StockTicker.html" />
+    <Content Include="Signalr\jquery-1.10.2.min.js" />
+    <Content Include="Signalr\jquery.color-2.1.2.min.js" />
+    <Content Include="Signalr\SignalR.StockTicker.js" />
+    <Content Include="Signalr\StockTicker.css" />
+    <Content Include="Signalr\StockTicker.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -886,7 +885,7 @@
     <Content Include="Views\Workgroup\UpdateMultipleAccounts.cshtml" />
     <Content Include="Views\Workgroup\VendorList.cshtml" />
     <Content Include="Views\Workgroup\WhoHasAccessToWorkgroup.cshtml" />
-    <Content Include="SignalR.Sample\jquery-1.10.2.min.map" />
+    <Content Include="Signalr\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
