cleaned up and on layout page

--- a/Purchasing.Mvc/Purchasing.Mvc.csproj
+++ b/Purchasing.Mvc/Purchasing.Mvc.csproj
@@ -669,6 +669,7 @@
     <Content Include="Scripts\public\single\OrderReview.js" />
     <Content Include="Scripts\public\single\RearrangeDataTable.js" />
     <Content Include="Scripts\public\single\SausageCustom.js" />
+    <Content Include="Scripts\public\single\SignalrClient.js" />
     <Content Include="Scripts\public\single\TableTools.js" />
     <Content Include="Scripts\public\single\ZeroClipboard.js" />
     <Content Include="Scripts\qunit.js" />
