--- a/Purchasing.Mvc/packages.config
+++ b/Purchasing.Mvc/packages.config
@@ -45,6 +45,7 @@
   <package id="Sendgrid" version="5.0.0" targetFramework="net451" />
   <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net451" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net451" />
+  <package id="toastr" version="2.1.0" targetFramework="net451" />
   <package id="UcdArch" version="5.1.0.145" targetFramework="net451" />
   <package id="UcdArch.Mvc" version="5.1.0.144" targetFramework="net45" />
   <package id="UcdArch.NHibernate" version="5.1.0.144" targetFramework="net451" />
