Same JS move for payinvoice

--- a/Purchasing.Mvc/Purchasing.Mvc.csproj
+++ b/Purchasing.Mvc/Purchasing.Mvc.csproj
@@ -645,6 +645,7 @@
     <Content Include="Scripts\public\single\jquery.tmpl.min.js" />
     <Content Include="Scripts\public\single\Landing.js" />
     <Content Include="Scripts\public\single\OrderReview.js" />
+    <Content Include="Scripts\public\single\payinvoice.js" />
     <Content Include="Scripts\public\single\RearrangeDataTable.js" />
     <Content Include="Scripts\public\single\receiveitems.js" />
     <Content Include="Scripts\public\single\SausageCustom.js" />
