--- a/Purchasing.Jobs.CreateOrderIndexes/packages.config
+++ b/Purchasing.Jobs.CreateOrderIndexes/packages.config
@@ -4,6 +4,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="Dapper" version="1.38" targetFramework="net451" />
   <package id="Elasticsearch.Net" version="1.4.0" targetFramework="net451" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.2" targetFramework="net451" />
   <package id="NEST" version="1.4.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
