Filter out apple touch errors from elmah

--- a/Purchasing.Mvc/Web.config
+++ b/Purchasing.Mvc/Web.config
@@ -210,6 +210,7 @@
       <test>
         <or>
           <equal binding="BaseException.Message" value="Server cannot set status after HTTP headers have been sent." type="String" />
+          <regex binding="BaseException.Message" pattern="The controller for path '/apple-touch[^']+' was not found or does not implement IController." />
         </or>
       </test>
     </errorFilter>
