--- a/Purchasing.Jobs.NightlySync/packages.config
+++ b/Purchasing.Jobs.NightlySync/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.38" targetFramework="net451" />
   <package id="elmah.io.client" version="2.0.22" targetFramework="net451" />
   <package id="Microsoft.Azure.WebJobs" version="1.0.1" targetFramework="net451" />
   <package id="Microsoft.Azure.WebJobs.Core" version="1.0.1" targetFramework="net451" />
