--- a/Purchasing.Jobs.EmailNotifications/packages.config
+++ b/Purchasing.Jobs.EmailNotifications/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net451" />
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net451" />
   <package id="Microsoft.Data.Services.Client" version="5.6.0" targetFramework="net451" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.3" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
