add and config stackify and serilog

--- a/Purchasing.Mvc/Web.config
+++ b/Purchasing.Mvc/Web.config
@@ -13,6 +13,7 @@
     </sectionGroup>
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
     <section name="syscache" type="NHibernate.Caches.SysCache2.SysCacheSectionHandler, NHibernate.Caches.SysCache2" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <appSettings file="AppSettings.config">
     <add key="webpages:Version" value="3.0.0.0" />
@@ -22,11 +23,14 @@
     <add key="AfsUrl" value="https://kfs-test.ucdavis.edu/kfs-stg/remoting/purchaseDocumentsInterfaceServiceSOAP" />
     <add key="AfsRoleUrl" value="http://kfs-test.ucdavis.edu/kfs-stg/remoting/financialSystemRoleServiceSOAP" />
     <add key="AfsToken" value="stage" />
+    <add key="Stackify.AppName" value="Purchasing" />
+    <add key="Stackify.Environment" value="[External]" />
+    <add key="Stackify.ApiKey" value="[External]" />
   </appSettings>
   <connectionStrings>
     <add name="MainDB" connectionString="data source=.\SQLExpress;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
-    <!--
+  <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
     The following attributes can be set on the <httpRuntime> tag.
@@ -95,6 +99,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.WindowsAzure.Storage" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.1.0.3" newVersion="2.1.0.3" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Serilog" publicKeyToken="24c2f752a8e58a10" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.0.0" newVersion="1.5.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -205,7 +213,6 @@
     -->
     <security allowRemoteAccess="false" />
     <errorLog type="Elmah.Io.ErrorLog, Elmah.Io" LogId="8223b9a6-4f5a-4216-bc3a-8c58f9945c9b" />
-
     <errorFilter>
       <test>
         <or>
