--- a/Purchasing.Mvc/packages.config
+++ b/Purchasing.Mvc/packages.config
@@ -39,7 +39,11 @@
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="Sendgrid" version="5.0.0" targetFramework="net451" />
   <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net451" />
+  <package id="Serilog" version="1.5.7" targetFramework="net451" />
+  <package id="Serilog.Sinks.Stackify" version="1.0.12.0" targetFramework="net451" />
+  <package id="SerilogWeb.Classic" version="2.0.6" targetFramework="net451" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net451" />
+  <package id="StackifyLib" version="1.12.0.0" targetFramework="net451" />
   <package id="UcdArch" version="5.1.0.145" targetFramework="net451" />
   <package id="UcdArch.Mvc" version="5.1.0.144" targetFramework="net45" />
   <package id="UcdArch.NHibernate" version="5.1.0.144" targetFramework="net451" />
