--- a/Purchasing.Jobs.Common/packages.config
+++ b/Purchasing.Jobs.Common/packages.config
@@ -4,6 +4,8 @@
   <package id="elmah.io.client" version="2.0.22" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
-  <package id="Serilog" version="1.4.204" targetFramework="net451" />
+  <package id="Serilog" version="1.5.7" targetFramework="net451" />
   <package id="Serilog.Sinks.ElmahIO" version="1.5.8" targetFramework="net451" />
+  <package id="Serilog.Sinks.Stackify" version="1.0.12.0" targetFramework="net451" />
+  <package id="StackifyLib" version="1.12.0.0" targetFramework="net451" />
 </packages>
