--- a/Purchasing.Jobs.NightlySync/packages.config
+++ b/Purchasing.Jobs.NightlySync/packages.config
@@ -11,8 +11,10 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
-  <package id="Serilog" version="1.4.204" targetFramework="net451" />
+  <package id="Serilog" version="1.5.7" targetFramework="net451" />
   <package id="Serilog.Sinks.ElmahIO" version="1.5.8" targetFramework="net451" />
+  <package id="Serilog.Sinks.Stackify" version="1.0.12.0" targetFramework="net451" />
+  <package id="StackifyLib" version="1.12.0.0" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="4.0.1" targetFramework="net451" />
 </packages>
