add serilog to webservice and log exceptions

--- a/Purchasing.Jobs.Common/app.config
+++ b/Purchasing.Jobs.Common/app.config
@@ -16,7 +16,7 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="Stackify.AppName" value="" />
+    <add key="Stackify.AppName" value="Purchasing" />
     <add key="Stackify.Environment" value="" />
     <add key="Stackify.ProxyServer" value="" />
     <add key="Stackify.ApiKey" value="[External]" />
