--- a/Purchasing.WS/app.config
+++ b/Purchasing.WS/app.config
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="purchaseDocumentsInterfaceServiceSOAPSoapBinding" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://kfs1.ucdavis.edu/kfs-prd/remoting/purchaseDocumentsInterfaceServiceSOAP" binding="basicHttpBinding" bindingConfiguration="purchaseDocumentsInterfaceServiceSOAPSoapBinding" contract="PurchaseDocumentService.purchasingDocumentsInterfaceServiceSOAP" name="purchasingDocumentsInterfaceServiceSOAPPort" />
-        </client>
-    </system.serviceModel>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="purchaseDocumentsInterfaceServiceSOAPSoapBinding" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://kfs1.ucdavis.edu/kfs-prd/remoting/purchaseDocumentsInterfaceServiceSOAP" binding="basicHttpBinding" bindingConfiguration="purchaseDocumentsInterfaceServiceSOAPSoapBinding" contract="PurchaseDocumentService.purchasingDocumentsInterfaceServiceSOAP" name="purchasingDocumentsInterfaceServiceSOAPPort" />
+    </client>
+  </system.serviceModel>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -30,4 +30,13 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" /></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+  </startup>
+  <appSettings>
+    <add key="Stackify.AppName" value="Purchasing" />
+    <add key="Stackify.Environment" value="" />
+    <add key="Stackify.ProxyServer" value="" />
+    <add key="Stackify.ApiKey" value="[External]" />
+  </appSettings>
+</configuration>
