--- a/Purchasing.WS/packages.config
+++ b/Purchasing.WS/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
+  <package id="Serilog" version="1.5.7" targetFramework="net451" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net40" />
   <package id="UcdArch" version="5.1.0.145" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="2.1.0.3" targetFramework="net40" />
