adding app insights to opp

--- a/Purchasing.Mvc/Web.config
+++ b/Purchasing.Mvc/Web.config
@@ -20,6 +20,7 @@
     <add key="Stackify.AppName" value="Purchasing" />
     <add key="Stackify.Environment" value="[External]" />
     <add key="Stackify.ApiKey" value="[External]" />
+    <add key="ApplicationInsightsKey" value="[External]"/>
   </appSettings>
   <connectionStrings>
     <add name="MainDB" connectionString="data source=.\SQLExpress;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
@@ -50,6 +51,9 @@
         <add name="PurchasingRoleProvider" type="Purchasing.Mvc.Providers.PurchasingRoleProvider" connectionStringName="MainDB" applicationName="Purchasing" />
       </providers>
     </roleManager>
+    <httpModules>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
+    </httpModules>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -189,6 +193,10 @@
         <add name="X-UA-Compatible" value="IE=Edge,chrome=1" />
       </customHeaders>
     </httpProtocol>
+    <modules>
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+    </modules>
   </system.webServer>
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
