--- a/Purchasing.Jobs.NotificationsCommon/packages.config
+++ b/Purchasing.Jobs.NotificationsCommon/packages.config
@@ -3,9 +3,9 @@
   <package id="Dapper" version="1.38" targetFramework="net451" />
   <package id="Flurl" version="1.0.7" targetFramework="net451" />
   <package id="Flurl.Http" version="0.6.0" targetFramework="net451" />
-  <package id="Mandrill" version="2.1.4.0" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
   <package id="Sendgrid" version="5.0.0" targetFramework="net451" />
   <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net451" />
+  <package id="SparkPost" version="1.0.7" targetFramework="net451" />
 </packages>
